--- a/public/scss/_haiyanubills.scss
+++ b/public/scss/_haiyanubills.scss
@@ -35,7 +35,8 @@
 
         h3 {
             color: #fff;
-            border: 4px solid #fff;
+            border: 1px solid #222;
+            background: rgba(0, 0, 0, 0.4);
             padding: 10px;
             width: 90%;
             margin: 0 auto 25px;
@@ -49,7 +50,7 @@
 
         .btn-slide {
             position: relative;
-            top: 74px;
+            top: 75px;
             color: #fff;
             font-size: 24px;
             padding: 20px 45px;
@@ -130,7 +131,8 @@
 
         h3 {
             color: #fff;
-            border: 4px solid #fff;
+            border: 1px solid #222;
+            background: rgba(0, 0, 0, 0.4);
             padding: 10px;
             width: 700px;
             margin: 0 auto 25px;
@@ -146,7 +148,7 @@
 
         .btn-slide {
             position: relative;
-            top: 74px;
+            top: 75px;
             color: #fff;
             font-size: 24px;
             padding: 20px 45px;
