--- a/public/scss/_haiyanubills.scss
+++ b/public/scss/_haiyanubills.scss
@@ -35,7 +35,7 @@
 
         h3 {
             color: #fff;
-            border: 1px solid #222;
+            border: 1px solid rgba(17, 17, 17, 0.4);
             background: rgba(0, 0, 0, 0.4);
             padding: 10px;
             width: 90%;
@@ -131,7 +131,7 @@
 
         h3 {
             color: #fff;
-            border: 1px solid #222;
+            border: 1px solid rgba(17, 17, 17, 0.4);
             background: rgba(0, 0, 0, 0.4);
             padding: 10px;
             width: 700px;
